# test

ansible/: clouds.yml  db_reseter.sh  hosts  main.yml  playbook.yml.bak
bench/: .#loop.rb  a.out  fib  loop  loop.c  loop.go  loop.hs  loop.pl  loop.py  loop.rb  loop.s  loop.sh  loop2  loop2.c  loop2.go  loop2.hs  loop2.pl  loop2.py  loop2.rb  loop2.s  loop3  loop3.hs  loop4  loop4.hs
haskell/: .#async2.hs  .#parallel4.hs  .#sort.hs  FxSetting  Main.hs  OandaOrders.hs  STAlgorithms.hs  args  args.hs  args2.hs  args3  args3.hs  async.hs  async2  async2.hs  class.hs  class2.hs  comb  comb.hs  dice  dice.hs  dice2  dice2.hs  dice3.hs  dice4  dice4.hs  do.hs  (+57 more)
python/: .#diary.txt  .#gplus.py  .#index.py  .#keypress_check.c  .#keypress_check_b.py  .#rmp_ranking.py  .#ttt  280416.csv  280416.txt  CMakeCache.txt  CMakeLists.txt  Makefile  aac2rmp.txt  args.py  boost.txt  class.py  class2.py  cmake_install.cmake  csv2fx.py  curses_test.py  file_test.py  file_walk_test.py  fork_test.py  getStructure.py  getch_test.py  helloworld.c  helloworld.pyx  http_client_test.py  index.html.1  index.py  index.py.bak  insert_rmp_db.py  json2db.py  keypress_check.c  keypress_check.py  keypress_check2.py  keypress_check_b.py  md.md  md.py  md.txt  (+24 more)
python/bak/: rmp.csv  rmp.json  rmp.py  rmp.py.bak  rmp2.json  rmp2db.py  rmp_c.py  rmp_ranking.py
python/bak/dump/rmp/: rmp.bson  rmp.metadata.json  system.indexes.bson
python/bak/flg/: manage.py
python/bak/flg/flg/: settings.py  urls.py  wsgi.py
python/bak/flg/rmp/: models.py  views.py
python/bak/plus/: client_secrets.json  plus.py
(+37 files in other folders)
